terraform/modules/networking/main.tf
resource "aws_vpc" "main" {
    cidr_block = var.vpc_cidr
    enable_dns_support = true
    enable_dns_hostnames = true
    tags = {
        Name = "${var.project_name}-vpc"
    }
  
}


resource "aws_subnet" "public" {
    count = var.public_subnet_count
    vpc_id = aws_vpc.main.id
    cidr_block = var.public_subnet_cidr[count.index]
    availability_zone = var.availabilty_zones[count.index]
    map_public_ip_on_launch = true
    tags = {
        Name = "${var.project_name}-public-subnet-${count.index + 1}"
    }
  
}

resource "aws_subnet" "private" {
    count = var.private_subnet_count
    vpc_id = aws_vpc.main.id
    cidr_block = var.private_subnet_cidr[count.index]
    availability_zone = var.availabilty_zones[count.index]
    tags = {
        Name = "${var.project_name}-private-subnet-${count.index + 1}"
    }
  
}


resource "aws_internet_gateway" "main" {
    vpc_id = aws_vpc.main.id
    tags = {
        Name = "${var.project_name}-igw"
    }
  
}

resource "aws_route_table" "public" {
    vpc_id = aws_vpc.main.id
    route = {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.main.id
    }

    tags = {
        Name = "${var.project_name}-public-rt"
    }
  
}

resource "aws_route_table_association" "public" {
    count = var.public_subnet_count
    subnet_id = aws_subnet.public[count.index].id
    route_table_id = aws_route_table.public.id
  
}


resource "aws_eip" "nat" {
    domain = "vpc"
  
}

resource "aws_nat_gateway" "main" {
    allocation_id = aws_eip.nat.id
    subnet_id = aws_subnet.public[0].id
    tags = {
    Name = "${var.project_name}-nat-gateway"
    }
}

resource "aws_route_table" "private" {
    vpc_id = aws_vpc.main.id
    route = {
        cidr_block = "0.0.0.0/0"
        nat_gateway_id = aws_nat_gateway.main.id
    }
    tags = {
        Name = "${var.project_name}-private-rt"
    }

}

resource "aws_route_table_association" "private" {
    count = var.private_subnet_count
    subnet_id = aws_subnet.private[count.index].id
    route_table_id = aws_route_table.private.id
  
}
